Correct declaration of gdaui_entry_shell_refresh_attributes()

From Halton Huo <halton.huo@sun.com>
Fixes https://bugzilla.gnome.org/show_bug.cgi?id=614922